Name: cmdtheline
Version: 0.1.0.0
Synopsis: Declaritive command-line option parsing and documentation library.
Description:
  CmdTheLine aims to remove tedium from the definition of command-line
  programs.
  .
  The inspiration was found in Daniel Bunzli's
  <http://erratique.ch/software/cmdliner> library.
  .
  CmdTheLine uses applicative functors to provide a declarative, compositional
  mechanism for defining command-line programs by lifting regular Haskell
  functions.
  .
  The dependencies listed conform to what I have had occasion to test for, but
  the library is pretty conservative in it's use of other modules.  It is
  encouraged and greatly apreciated for others to push the limits and report
  expanded version ranges.

Homepage:      http://github.com/eli-frey/cmdtheline
License:       MIT
License-file:  LICENSE
Author:        Eli Frey
Maintainer:    Eli Frey <eli.lee.frey gmail com>
Stability:     Experimental
Category:      Console
Cabal-version: >=1.6
Build-type:    Simple

extra-source-files: doc/examples/*.hs

Library
  hs-source-dirs: src
  extensions:     FlexibleInstances
  build-depends:  base >= 4.5, containers >= 0.4, parsec >= 3.1, pretty >= 1.1,
                  process >= 1.1, directory >= 1.1

  exposed-modules: System.Console.CmdTheLine,
                   System.Console.CmdTheLine.Arg,
                   System.Console.CmdTheLine.Term,
                   System.Console.CmdTheLine.Manpage

  other-modules:   System.Console.CmdTheLine.Common,
                   System.Console.CmdTheLine.Err,
                   System.Console.CmdTheLine.Help,
                   System.Console.CmdTheLine.Trie,
                   System.Console.CmdTheLine.CmdLine
